# wiki-agent-mcp

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py  wiki_agent_mcp_server.py
docs/: architecture.md  storage.md  testing.md  tools.md
docs/adr/: 001_premium_session_architecture.md
examples/: claude_desktop_config.json
scripts/: run_server.sh
src/wiki_agent_mcp/: SKILL.md  __init__.py  main.py  server.py
src/wiki_agent_mcp/agents/: architect.py  base.py  expander.py  writer.py
src/wiki_agent_mcp/domain/: models.py  reporting.py
src/wiki_agent_mcp/infrastructure/: llm_client.py
src/wiki_agent_mcp/storage/: persistent.py  session.py
src/wiki_agent_mcp/utils/: config.py
tests/: test_server.py
