[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-agent-mcp"
version = "1.0.0"
description = "Multi-agent progressive wiki generator for MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["mcp", "wiki", "llm", "agent", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "requests>=2.31.0",
]

[project.scripts]
wiki-agent-mcp = "wiki_agent_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/wiki-agent-mcp"
Repository = "https://github.com/yourusername/wiki-agent-mcp"
Issues = "https://github.com/yourusername/wiki-agent-mcp/issues"